--- a/components/huvsai/huvsai.template.html
+++ b/components/huvsai/huvsai.template.html
@@ -16,15 +16,15 @@
              on-move="doMove(move)"
              on-ai-move="aiMove()"
              on-new-game="newGame()"
-             on-show-black-logic="showLogicPlayer = 'B'"
+             on-show-black-logic="showLogic('B')"
              on-return-to-main-menu="returnToMainMenu()" />
 
   <hxp-show-logic ng-hide="showLogicPlayer == ''"
                   i18n ="i18n"
-                  game="game"
+                  player-name="game.players[showLogicPlayer].name"
                   boards="showLogicBoards"
                   player="showLogicPlayer"
-                  on-hide-logic="showLogicPlayer = ''" />
+                  on-hide-logic="showLogic('')" />
 
 </div>
 
