--- a/css/gameboard.css
+++ b/css/gameboard.css
@@ -1,6 +1,5 @@
 #game-screen {
   width: 50%;
-  min-height: 60%;
   max-height: 80%;
   overflow-y: auto;
   min-width: 13em;
@@ -75,7 +74,6 @@
 #game-screen .board-container .board {
   border-collapse: collapse;
   top:  -9em;
-  float: clear;
   position: relative;
 }
 
@@ -144,32 +142,6 @@
   margin: auto;
 }
 
-hxp-show-logic {
-  background: transparent;
-  width: 100%;
-  overflow-y: auto;
-}
-
-#game-screen hxp-show-logic .board-container {
-  float: none;
-  margin: 0em 1em 1em;
-  font-size: 80%;
-}
-
-#game-screen hxp-show-logic .moves {
-  width: auto;
-  float: none;
-  padding:  0;
-  font-size: 80%;
-}
-
-#game-screen hxp-show-logic .moves button {
-  width: auto;
-  float: left;
-  padding: 0em 0.5em;
-  margin: 0em 0.5em 0em 0em;
-}
-
 /* Responsive media breaks */
 @media (max-width: 20em) and (max-height: 36em) {
   #game-screen {
@@ -177,9 +149,12 @@ hxp-show-logic {
   }
 }
 
-@media (min-height: 30em) and (min-width: 26em) {
+@media (max-width: 59em) and (min-height: 30em) and (min-width: 26em) {
   #game-screen {
     font-size: 150%;
+  }
+  #game-screen .moves {
+    float: none;
   }
 }
 
@@ -187,6 +162,10 @@ hxp-show-logic {
 @media (min-width: 50em) and (min-height:65em) {
   #game-screen {
     font-size: 200%
+  }
+
+  #game-screen .moves {
+    float: none;
   }
 
 }
@@ -207,7 +186,7 @@ hxp-show-logic {
   }
 }
 
-@media (min-width: 46em) and (max-height:26em) {
+@media (min-width: 46em) and (max-height:26em) and (max-width:59em) {
 
   #game-screen {
     font-size: 100%;
@@ -215,15 +194,13 @@ hxp-show-logic {
   }
 
   .board-container {
-    float:left
+    float:none
   }
 
+  .moves, #game-over {
+    float:none
+  }
 }
-.moves, #game-over {
-  float:right
-}
-}
-
 
 @media (min-width: 60em) and (max-height:48em) {
 
@@ -244,8 +221,8 @@ hxp-show-logic {
 
   #game-screen {
     font-size: 200%;
-    width: 50%;
-    padding: 2em 6em;
+    width: 65%;
+    padding: 2em 3em;
   }
 
   .board-container {
@@ -258,7 +235,7 @@ hxp-show-logic {
   }
 
   .moves, #game-over {
-    float:right
+    float:right;
   }
 
   .tile {
