Created the logic so that AI's will store their learning

--- a/components/welcome/welcome.template.html
+++ b/components/welcome/welcome.template.html
@@ -19,6 +19,11 @@
         {{i18n.AI_VS_AI}}
       </button>
     </li>
+    <li>
+      <button ng-click="resetAI()">
+        {{i18n.RESET_AI}}
+      </button>
+    </li>
   </ul>
 
 </div>
