Corrected bug in storing AI experience
the program was ignoring that only experience playing as the same player
(White or Black) could be transferred to new situations.

--- a/components/welcome/welcome.template.html
+++ b/components/welcome/welcome.template.html
@@ -20,7 +20,7 @@
       </button>
     </li>
     <li>
-      <button ng-click="resetAI()">
+      <button ng-click="resetAi()">
         {{i18n.RESET_AI}}
       </button>
     </li>
